[package]
name = "Counter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "1.3.1"
borsh-derive = "1.3.1"
solana-program = "1.17.15"

[dev-dependencies]
solana-program-test = "1.17.15"
solana-sdk = "1.17.15"
